--- a/style.css
+++ b/style.css
@@ -3,23 +3,36 @@ p {
     font-size:12px;
     text-decoration:line-through;
 }
+
+#into{
+	border-style:solid;
+    border-width:1px;
+    border-left-width:10px;
+    border-right-width:10px;
+    border-color: black;
+}
+
+.spotlight{
+	background-color:#FEFE22;
+}
+
 h1 {
 	text-transform:uppercase;
 	color:#003300;
-	background-color:#888888;
 	margin:20px;
-	padding:40px;
-	border-style:dashed;
-    border-width:5px;
-    border-left-width: 10px;
-    border-right-width: 10px;
+	padding:20px;
+	border-style:solid;
+    border-width:2px;
+    border-left-width: 2px;
+    border-right-width: 2px;
     border-color: red;
 }
+
 h2{
 	color:#004400;
-	background-color:#888888;
 	text-decoration:underline;
 }
+
 body{
 	font-family:sans-serif;
 }
